xxxx xx 2008 : Release 1.6.0 xxxx
==================================

Updates to QuickGUI and Caelum C++ library source
Implemented Hikari demo (implemented callbacks in the wrapper generation)
Fixed code generation for QuickGui, bullet and noise to correctly generate PyDoc documentation strings
Implemented description text and description links in environment.py to help automate module summary



August 29 2008 : Release 1.6.0 RC1
==================================
The Python-Ogre version numbering has changed to match the Ogre release versions along with the SVN release numbering
    'Python-Ogre-<ogre version>-<SVN Version>-<Python Version>'
    Built using MSVC 9, DirectX August 2008, Boost 1.36.0, Py++ r1383
    
** Modules Included and their versions **
  OGRE 1.6.0RC1
  OIS 1.2
  CEGUI 0.6.1
  QuickGUI 0.9.7
  betagui 1.7
  OgreAL 0.3
  ODE 0.10.1
  OgreRefApp 1.6.1RC1
  OgreOde 1.0
  OgreNewt 1.0
  Opcode 1.3
  bullet 2.70
  PhysX 2.8.1
  NxOgre 1.0-21
  OgreBulletC 1.0
  OgreBulletD 1.0
  theora 0.5.0
  plib 1.8.4
  ogreforests 0.1
  et 2.2
  caelum 0.2.1
  noise 1.0
  watermesh 1.0
  particleuniverse 0.8
  cadunetree 0.6
  ogrepcz 1.0
  hydrax 0.3

** Various Fixes/Changes ** 
Change: OgreOde and OgreRefApp tweaked to work with ODE 0.10  (change to initalisation)
Change: Ogre renderQueueStarted (etc) modules to return bool instead of passing as a reference
Change: Theora is now the only support Video module -- fixed demo to use a different source file as sound corrupted on 'fish'
Change: Updated all media to match Ogre 1.6.0RC1
Change: CEGUIFramework now forces parser to use ExpatParser under Windows as TinyXML isn't built by default
Change: QuickGui needed adjustment to support QueueStarted (etc) API changes
Change: Hydrax also changed due to QueueStarted (etc) API changes
Change: Improvements to Ogre Portal SceneManager wrapper